--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,8 +3,6 @@
     font-family: 'Arial', sans-serif;
     background-color: #f5f5f5; /* Neutral background color */
     color: #333; /* Dark text for good contrast */
-    display: flex;
-    flex-direction: column;
     justify-content: space-between; /* Space the content evenly from top to bottom */
     align-items: center;
     height: 100vh; /* Full viewport height */
@@ -21,19 +19,19 @@
   }
   
   .homepage-title {
-    font-size: 3rem;
-    margin-bottom: 20px;
+    font-size: 2rem;
+    margin-bottom: 0px;
     color: #2c3e50; /* Darker color for the title */
   }
   
   .intro-text {
     font-size: 1.2rem;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     color: #555; /* Slightly lighter color for intro text */
   }
   
   .location-selector {
-    margin-bottom: 20px;
+    margin-bottom: 0px;
   }
   
   select {
@@ -46,18 +44,14 @@
   }
   
   .weather-card {
-    background-color: #ffffff; /* White background for the card */
-    padding: 20px;
-    border-radius: 10px;
     max-width: 600px;
     width: 80%; /* Make the card stretch horizontally */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
   }
   
   .weather-location {
     font-size: 1.8rem;
-    margin-bottom: 15px;
+    margin-bottom: 0px;
     color: #2c3e50;
   }
   
@@ -89,5 +83,9 @@
     color: #ffcc00;
   }
 
-
+body {
+  height: 100vh;
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+  background: #f5f5f5; /* Match your background color */
+}
   
